--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -194,6 +194,10 @@ video {
   padding-bottom: 15px;
 }
 
+.accueilH3 {
+  visibility: hidden;
+}
+
 .left_col {
     width:10%;
     margin-left: 4%;
@@ -202,8 +206,8 @@ video {
     height: 50vh;
     position: absolute;
     overflow-y: scroll;
-    background-color: rgba(209, 222, 145, 0.8);
-    border: 10px solid rgba(255, 0, 0, 0.95);
+    background-color: #222;
+    border: 10px solid rgba(255, 165, 0, 0.95);
  }
 
 .left_col img {
@@ -226,7 +230,7 @@ video {
   font-weight: bold;
   font-style: normal;
   font-size: 25pt;
-  color: #547192;
+  color: rgba(255, 140, 0, 0.95);
   text-shadow: 1px 1px 1px #000;
 }
 
@@ -242,12 +246,17 @@ video {
    left: 0;
  }
 
- p {
+ .raccourcis {
+   font-size: 25pt;
+   text-align: center;
+ }
+
+.liens-playlist {
    font-family: Arial, Helvetica, sans-serif;
    font-weight: bold;
    font-style: normal;
    font-size: 20pt;
-   color: #547192;
+   color: rgba(255, 140, 0, 0.95);
    width: 100%;
    margin: 0;
    text-align: center;
