Mise à jour majeur, gestion des thèmes, changement des vignettes, mode automatique,etc.

--- a/assets/css/audioplayer.css
+++ b/assets/css/audioplayer.css
@@ -21,6 +21,6 @@ a{
 
 canvas {
   border: 3px solid rgba(255,0,0,0.5);
-  background-image: url("../img/philippe.png");
+  background-image: url("../img/album cover/Mal_tèt.jpeg");
   background-size: cover;
 }
