--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100&display=swap');
+
 @font-face {
   font-family: 'HeydingsControlsRegular';
   src: url('../fonts/heydings_controls.eot');
@@ -17,12 +19,6 @@ button:before {
   content: attr(data-icon);
   color: #aaa;
   text-shadow: 1px 1px 0px black;
-}
-
-body {
-  background-image: linear-gradient(to bottom, rgba(0,0,255,0.5), rgba(255,255,0,0.5)),
-  url('../img/fresque_coloree.jpg');
-  background-size: cover;
 }
 
 video {
@@ -66,6 +62,7 @@ video {
     height: 100%;
     width: 100%;
     margin-bottom: 50px;
+
   }
   .player {
     padding-left: 0;
@@ -139,11 +136,11 @@ video {
   font-weight: bold;
   font-style: normal;
   font-size: 40pt;
-  color: 	#FF8C00;
   width: fit-content;
   margin: auto;
   text-shadow: 3px 3px 3px #000;
-  background-color: lightblue;
+  color: var(--font-color);
+  background: var(--color-secondary);
   padding-top: 3px;
   padding-bottom: 10px;
 }
@@ -158,18 +155,16 @@ video {
   font-weight: bold;
   font-style: normal;
   font-size: 30pt;
-  color: 	#FF8C00;
   width: fit-content;
   margin: auto;
   text-shadow: 3px 3px 3px #000;
-  background-color: lightblue;
+  color: var(--font-color);
+  background: var(--color-secondary);
   padding-top: 5px;
   padding-bottom: 15px;
 }
 
-.accueilH3 {
-  visibility: hidden;
-}
+
 
 .left_col {
   width:10%;
@@ -187,21 +182,10 @@ video {
   width: 100%;
 }
 
-/* Hide scrollbar for Chrome, Safari and Opera */
-.left_col::-webkit-scrollbar {
-  display: none;
-}
 
-/* Hide scrollbar for IE, Edge and Firefox */
-.left_col {
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
-}
 
 .left_col {
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: bold;
-  font-style: normal;
+  font-family: 'Lato', sans-serif;
   font-size: 25pt;
   color: rgba(255, 140, 0, 0.95);
   text-shadow: 1px 1px 1px #000;
@@ -220,14 +204,13 @@ dt {
 }
 
 .raccourcis {
+  font-family: 'Lato', sans-serif;
   font-size: 25pt;
   text-align: center;
 }
 
 .liens-playlist {
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: bold;
-  font-style: normal;
+  font-family: 'Lato', sans-serif;
   font-size: 20pt;
   color: rgba(255, 140, 0, 0.95);
   width: 100%;
@@ -241,8 +224,14 @@ dt {
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-
+  column-gap: 2%;
 }
+
+.link_song a {
+  text-decoration: none !important;
+  color: white;
+}
+
 .link_song > .flex-row-item {
   flex: 1 1 25%; /*grow | shrink | basis */
   flex-basis: 25%;
@@ -253,10 +242,205 @@ dt {
 }
 
 .link_song img {
-  width: 90%;
-  margin-left: 5%;
+  width: 100%;
 }
 
+.link_song  .miniature {
+  height: 100%;
+  width: 100%;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #fff;
+  background-color: #000;
+
+}
+.accueilH3 {
+  font-family: 'Lato', sans-serif;
+  text-decoration-color: #fff;
+  padding-left: 5%;
+}
+
+@media screen and (min-width: 1280px)
+{
+
+  .box {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    border: 1px solid white;
+  }
+
+  .top,
+  .bottom,
+  .left,
+  .right {
+    display: none;
+  }
+
+  .box:hover .top {
+    display: block;
+  }
+
+  .box:hover .bottom {
+    display: block;
+  }
+
+  .box:hover .left {
+    display: block;
+  }
+
+  .box:hover .right {
+    display: block;
+  }
+
+  .top,
+  .bottom,
+  .left,
+  .right {
+    position: absolute;
+    -webkit-animation: 8s linear infinite;
+    animation: 8s linear infinite;
+  }
+  .top {
+    top: -3px;
+    left: -3px;
+    height: 3px;
+    -webkit-animation-name: top;
+    animation-name: top;
+  }
+  @-webkit-keyframes top {
+    25% {
+      width: 0;
+      background: red;
+    }
+    38% {
+      width: calc(101%);
+      background: red;
+    }
+    50% {
+      background: red;
+    }
+    62% {
+      background: red;
+    }
+    75% {
+      width: calc(101%);
+      background: red;
+    }
+    88% {
+      left: auto;
+      right: -3px;
+      width: 0;
+      background: red;
+    }
+  }
+
+  .bottom {
+    bottom: -3px;
+    right: -3px;
+    height: 3px;
+    -webkit-animation-name: bottom;
+    animation-name: bottom;
+  }
+  @-webkit-keyframes bottom {
+    0% {
+      width: 0;
+    }
+    12% {
+      width: calc(101%);
+      background: red;
+    }
+    25% {
+      background: red;
+    }
+    38% {
+      background: red;
+    }
+    50% {
+      width: calc(101%);
+      background: red;
+    }
+    62% {
+      left: -3px;
+      width: 0;
+      background: red;
+    }
+    75% {
+      background: red;
+    }
+  }
+
+  .left {
+    bottom: -3px;
+    left: -3px;
+    width: 3px;
+    -webkit-animation-name: left;
+    animation-name: left;
+  }
+  @-webkit-keyframes left {
+    12% {
+      height: 0;
+      background: red;
+    }
+    25% {
+      height: calc(101%);
+      background: red;
+    }
+    38% {
+      background: red;
+    }
+    50% {
+      background: red;
+    }
+    62% {
+      height: calc(101%);
+      background: red;
+    }
+    75% {
+      top: -3px;
+      height: 0;
+      background: red;
+    }
+    88% {
+      background: red;
+    }
+  }
+
+  .right {
+    top: -3px;
+    right: -3px;
+    width: 3px;
+    -webkit-animation-name: right;
+    animation-name: right;
+  }
+  @-webkit-keyframes right {
+    38% {
+      height: 0;
+      background: red;
+    }
+    50% {
+      height: calc(101%);
+      background: red;
+    }
+    62% {
+      background: red;
+    }
+    75% {
+      background: red;
+    }
+    88% {
+      height: calc(101%);
+      background: red;
+    }
+    100% {
+      top: auto;
+      bottom: -3px;
+      height: 0;
+      background: red;
+    }
+  }
+}
 .controls {
   visibility: hidden;
   opacity: 0.5;
@@ -314,8 +498,8 @@ dt {
 }
 
 .song_title {
-  font-family: 'Lobster', cursive;
-  src: url('../fonts/Lobster-Regular.ttf') format('truetype');
+  font-family: 'Lato', sans-serif;
+
   font-weight: bold;
   font-style: normal;
   font-size: 38pt;
@@ -328,28 +512,31 @@ dt {
 }
 
 .description {
-  font-family: 'Lobster', cursive;
-  src: url('../fonts/Lobster-Regular.ttf') format('truetype');
-  font-weight: bold;
+  padding-top: 10px;
+  padding-left: 30px;
+  padding-right: 30px;
+  font-family: "Gill Sans", sans-serif !important;
   font-style: normal;
-  font-size: 30pt;
+  font-size: 20pt;
   color: 	#000;
-  text-align: center;
-  text-shadow: 3px 3px 3px #FFF;
-  background-color: orange;
+  text-align: justify;
+  text-shadow: 0px 0px 0px #000;
+  background-color: #A78D6A;
   padding-bottom: 20px;
 }
 
 .visiteurs {
-  font-family: 'Lobster', cursive;
-  src: url('../fonts/Lobster-Regular.ttf') format('truetype');
+  font-family: "Gill Sans", sans-serif !important;
   font-weight: bold;
   font-style: normal;
   font-size: 20pt;
-  color: 	#000;
+  color: var(--my-color);
   text-align: center;
-  text-shadow: 3px 3px 3px #FFF;
   padding-bottom: 20px;
+}
+
+#obtension {
+  font-family: 'Lato', sans-serif;
 }
 
 footer p {
