--- a/assets/css/switchTheme.css
+++ b/assets/css/switchTheme.css
@@ -16,18 +16,19 @@
 }
 .container {
   display: flex;
-  width: 100%;
+  width: auto;
   height: 100%;
+  margin-left: 80px;
+  padding-top: 60px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 .container h1 {
-  font-family: 'Lobster', cursive;
-  src: url('../fonts/Lobster-Regular.ttf') format('truetype');
-  font-weight: bold;
+  font-family: "Gill Sans", sans-serif !important;
+  font-style: italic;
   font-size: 30pt;
-  text-shadow: 3px 3px 3px #000;
+  text-shadow: 2px 2px 2px #000;
   color: var(--font-color);
   background: var(--color-secondary);
   padding-left: 10px;
