Titre en haut des vidéos

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -553,7 +553,7 @@ dt {
   font-style: normal;
   font-size: 25pt;
   color: 	#000;
-  text-align: justify;
+  text-align: left;
   text-shadow: 1px 1px 1px #FFF;
   background-color: orange;
   padding-top: 1%;
