--- a/assets/css/audioplayer.css
+++ b/assets/css/audioplayer.css
@@ -1,26 +1,67 @@
 body {
-    text-align: center;
-    color: #fff;
+  text-align: center;
+  color: #fff;
 }
 a{
-    color:yellow;
+  color:yellow;
 }
 .bar-wrapper {
-    height: 300px;
-    position: relative;
+  height: 300px;
+  position: relative;
 }
 .bar {
-    position: relative;
-    bottom: 0;
-    width: 5px;
-    display: inline-block;
-    border: 1px solid red;
-    height: 5px;
-    border-bottom: 3px solid #fff;
+  position: relative;
+  bottom: 0;
+  width: 5px;
+  display: inline-block;
+  border: 1px solid red;
+  height: 5px;
+  border-bottom: 3px solid #fff;
 }
 
-canvas {
+.global-player-aud {
+  width: 800px;
+  margin-left:auto;
+  margin-right:auto;
+}
+
+.canvas {
   border: 3px solid rgba(255,0,0,0.5);
-  background-image: url("../img/album cover/Mal_tèt.jpeg");
+
   background-size: cover;
+}
+
+.myCanvas {
+  position: relative;
+  background-size: cover;
+  width: 62.5%;
+  height: 500px;
+  left:0;
+  right:0;
+  margin-left:auto;
+  margin-right:auto;
+}
+.canvas {
+  position: absolute;
+  width: calc(100% - 3px);
+  height: 100%;
+  left:0;
+  right:0;
+  margin-left:auto;
+  margin-right:auto;
+  z-index: -1;
+}
+.img {
+  visibility: hidden;
+  opacity: 60%;
+  width: 100%;
+  height: 90%;
+  padding-top: 10%;
+  z-index: 2;
+}
+#progress-bar {
+  width: 100%;
+  height: 20px;
+  border:1px solid green;
+  background-color: rgba(51,15,2,.8);
 }
