--- a/assets/css/aud-player.css
+++ b/assets/css/aud-player.css
@@ -18,7 +18,16 @@
   background: #484848;
 }
 
-/* (C) PLAY/PAUSE BUTTON */
+/* (C) PREVIOUS BUTTON */
+#skipPrevious {
+  padding: 0;
+  margin: 0;
+  background: 0;
+  border: 0;
+  cursor: pointer;
+}
+
+/* (E) PLAY/PAUSE BUTTON */
 #aPlay {
   padding: 0;
   margin: 0;
@@ -27,15 +36,24 @@
   cursor: pointer;
 }
 
-/* (D) TIME */
+/* (D) NEXT BUTTON */
+#skipNext {
+  padding: 0;
+  margin: 0;
+  background: 0;
+  border: 0;
+  cursor: pointer;
+}
+
+/* (F) TIME */
 #aCron {
   font-size: 14px;
   color: #cbcbcb;
   margin: 0 10px;
 }
 
-/* (E) RANGE SLIDERS */
-/* (E1) HIDE DEFAULT */
+/* (G) RANGE SLIDERS */
+/* (G1) HIDE DEFAULT */
 #aWrap input[type="range"] {
   box-sizing: border-box;
   appearance: none;
@@ -51,7 +69,7 @@
   appearance: none;
 }
 
-/* (E2) CUSTOM SLIDER TRACK */
+/* (G2) CUSTOM SLIDER TRACK */
 #aWrap input[type=range]::-webkit-slider-runnable-track {
   background: #626262;
 }
@@ -59,7 +77,7 @@
   background: #626262;
 }
 
-/* (E3) CUSTOM SLIDER BUTTON */
+/* (G3) CUSTOM SLIDER BUTTON */
 #aWrap input[type=range]::-webkit-slider-thumb {
   width: 16px; height: 16px;
   border-radius: 50%;
@@ -73,7 +91,7 @@
   background: #fff;
 }
 
-/* (F) VOLUME */
+/* (H) VOLUME */
 #aVolIco {
   margin: 0 10px;
 }
