--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -80,10 +80,31 @@ video {
     width: 50%;
     margin-left: 0;
     margin-right: 0;
-  }
-  audio {
+    audio {
+    }
     width: 80% !important;
     zoom: 200%;
+  }
+  #item {
+    flex: 50%;
+  }
+  .logo {
+    height: 40vw !important;
+    width: 40vw !important;
+  }
+  .big-title {
+    gap: 0% !important;
+  }
+  .title_site {
+    font-size: 70pt !important;
+    margin-right: 10%;
+  }
+  .visiteurs {
+    font-size: 40pt !important;
+  }
+  .compteur img {
+    width: 350px !important;
+    height: auto !important;
   }
 }
 
@@ -133,9 +154,34 @@ video {
     width: 80% !important;
     zoom: 150%;
   }
+  #item {
+    flex: 50%;
+  }
+  .logo {
+    height: 40vw !important;
+    width: 40vw !important;
+  }
+  .big-title {
+    gap: 0% !important;
+  }
+  .title_site {
+    font-size: 70pt !important;
+    margin-right: 10%;
+  }
+  .visiteurs {
+    font-size: 40pt !important;
+  }
+  .compteur img {
+    width: 350px !important;
+    height: auto !important;
+  }
 }
 
 .big-title {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 100px;
   height:auto;
   width: 100vw;
   margin-left: auto;
@@ -149,8 +195,8 @@ video {
 }
 
 .logo {
-  height: 70%;
-  width: 70%;
+  height: 12vw;
+  width: 12vw;
 }
 
 .title_site {
