--- a/assets/css/switchTheme.css
+++ b/assets/css/switchTheme.css
@@ -15,10 +15,10 @@
   --my-color: #999;
 }
 .container {
-  display: flex;
+
   width: auto;
   height: 100%;
-  margin-left: 80px;
+
   padding-top: 60px;
   flex-direction: column;
   justify-content: center;
@@ -117,6 +117,7 @@ input:checked + .slider:before {
 @media screen and (max-width: 1280px) {
   .container h1 {
     font-size: 40pt;
+    margin-right: 1%;
   }
   /* The switch - the box around the slider */
   .switch {
