--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -62,6 +62,10 @@ section h2 {
   z-index: 999;
 }
 
+.remonter:hover {
+  color: var(--my-color);
+}
+
 nav {
   font-family: "Gill Sans", sans-serif !important;
   display: flex;
@@ -335,9 +339,7 @@ nav p {
   justify-content: center;
   gap: 100px;
   height:auto;
-  width: 100vw;
-  margin-left: auto;
-  margin-right: auto;
+  width: 100%;
   text-align: center;
 }
 
