--- a/assets/css/light.css
+++ b/assets/css/light.css
@@ -4,6 +4,7 @@ body {
   background-size: cover;
   background-attachment: fixed;
   backdrop-filter: blur(5px);
+  margin: 0;
 }
 
 .accueilH3 img {
