Mise à jour dark theme

--- a/assets/css/dark.css
+++ b/assets/css/dark.css
@@ -3,6 +3,7 @@ body {
   background-size: cover;
   background-attachment: fixed;
   backdrop-filter: blur(5px);
+  margin: 0;
 }
 
 .accueilH3 img {
