--- a/assets/css/audioplayer.css
+++ b/assets/css/audioplayer.css
@@ -19,39 +19,26 @@ a{
   border-bottom: 3px solid #fff;
 }
 
-.global-player-aud {
-  width: 800px;
-  margin-left:auto;
-  margin-right:auto;
-}
-
 .canvas {
-  border: 3px solid rgba(255,0,0,0.5);
-
-  background-size: cover;
-}
-
-.myCanvas {
-  position: relative;
-  background-size: cover;
-  width: 62.5%;
-  height: 500px;
-  left:0;
-  right:0;
-  margin-left:auto;
-  margin-right:auto;
-}
-.canvas {
-  position: absolute;
-  width: calc(100% - 3px);
-  height: 100%;
-  left:0;
-  right:0;
-  margin-left:auto;
-  margin-right:auto;
+  /*position: -webkit-sticky; /* Safari */
+  /*position: sticky;*/
+  width: 100%;
+  height: 4vh;
+  margin-bottom: -11px;
   z-index: -1;
 }
+
+.progressBar {
+  /*position: -webkit-sticky; /* Safari */
+  /*position: sticky;*/
+  width: 100%;
+  height: 0.3vh;
+  z-index: -1;
+}
+
 .img {
+  /*position: -webkit-sticky; /* Safari */
+  /*position: sticky;*/
   visibility: hidden;
   opacity: 60%;
   width: 100%;
@@ -59,9 +46,18 @@ a{
   padding-top: 10%;
   z-index: 2;
 }
-#progress-bar {
+
+.monAudioPlayer {
+  /*position: -webkit-sticky; /* Safari */
+  /*position: sticky;*/
   width: 100%;
-  height: 20px;
-  border:1px solid green;
-  background-color: rgba(51,15,2,.8);
+}
+
+#cover {
+  width: 19vh;
+  height: 19vh;
+  background-size: cover;
+  margin-top: 5%;
+  z-index: -99;
+  border: 2px solid var(--my-color);
 }
