--- a/assets/css/form-project.css
+++ b/assets/css/form-project.css
@@ -1,22 +1,24 @@
 #contact-form {
-  max-width: 80vw;
+  max-width: 60vw;
   margin-left: auto;
   margin-right: auto;
+  text-align: center !important;
+  justify-content: center;
 }
 
 form label {
   font-family: "Gill Sans", sans-serif !important;
   font-weight: bold;
   font-size: 20px;
-  color: var(--font-color);
-  text-shadow: 2px 2px 2px #000;
+  color: #000;
+  background:rgba(192,192,192, 0.9);
 }
 
 .form-label {
   margin-bottom: 0.5rem;
   font-size: 0.875rem;
   font-weight: 400;
-  color: #7b809a;
+  color: #000;
 }
 
 .col-form-label {
@@ -26,7 +28,7 @@ form label {
   font-size: inherit;
   font-weight: 400;
   line-height: 1.5rem;
-  color: #7b809a;
+  color: #000;
 }
 
 .col-form-label-lg {
@@ -41,10 +43,14 @@ form label {
   font-size: 0.75rem;
 }
 
+input {
+  color: #000;
+}
+
 .form-text {
   margin-top: 0.25rem;
   font-size: 0.875em;
-  color: #bb6569;
+  color: #000;
   font-weight: Bold;
 }
 
@@ -55,27 +61,45 @@ form label {
   font-size: 0.875rem;
   font-weight: 400;
   line-height: 1.5rem;
-  color: var(--font-color);
-  background: var(--color-secondary);
+  color: #000;
+  background:rgba(192,192,192, 0.9);
+  border-radius: 25px;
+  border: 2px solid var(--my-color);
   opacity: .8;
   background-clip: padding-box;
-  border: 2px solid var(--font-color);
+
   appearance: none;
   border-radius: 0.375rem;
   transition: 0.2s ease;
 }
 
 .btn {
-  color: var(--font-color);
-  background: var(--color-secondary);
+  color: #000;
+  background:rgba(192,192,192, 0.9);
+  border-radius: 25px;
+  border: 2px solid var(--my-color);
   font-weight: bold;
   font-size: 20px;
-  text-shadow: 2px 2px 2px #000;
   margin-top: 20px;
 }
 
 @media screen and (max-width: 1280px) and (orientation: portrait)
 {
+  body {
+    height: 200vh;
+  }
+  #title {
+    padding-top: 10px;;
+  }
+  #contact-form {
+    max-width: 100vw;
+  }
+  .my_page {
+    height: 150vh;
+  }
+  .container {
+    display: none !important;
+  }
   form label {
     font-size: 50px !important;
     padding: 5px 5px 5px 5px;
