--- a/assets/css/switchTheme.css
+++ b/assets/css/switchTheme.css
@@ -144,3 +144,34 @@ input:checked + .slider:before {
     background-size: 60px;
   }
 }
+
+@media screen and (max-width: 1280px) and (orientation: landscape)
+{
+  .container h3 {
+    font-size: 20pt;
+    margin-right: 1%;
+  }
+  /* The switch - the box around the slider */
+  .switch {
+    width: 90px;
+    height: 40px;
+  }
+  input:checked + .slider:before {
+    -webkit-transform: translateX(56px);
+    -ms-transform: translateX(56px);
+    transform: translateX(56px);
+  }
+  /* Rounded sliders */
+  .slider.round {
+    border-radius: 34px;
+  }
+  .slider:before {
+    height: 49px;
+    width: 49px;
+    background-size: 30px;
+  }
+  input:checked + .slider:before {
+    background-size: 30px;
+  }
+}
+
