--- a/assets/css/form-project.css
+++ b/assets/css/form-project.css
@@ -1,9 +1,13 @@
 #contact-form {
-  max-width: 60vw;
+  max-width: 40vw;
   margin-left: auto;
   margin-right: auto;
   text-align: center !important;
   justify-content: center;
+}
+
+.container {
+  display: block;
 }
 
 form label {
@@ -11,6 +15,7 @@ form label {
   font-weight: bold;
   font-size: 20px;
   color: #000;
+  width: auto;
   background:rgba(192,192,192, 0.9);
 }
 
